--- a/basic front end development projects/TributePage/Sir Run Run Shaw.html
+++ b/basic front end development projects/TributePage/Sir Run Run Shaw.html
@@ -8,50 +8,50 @@
 </head>
 
 <head>
-    <style type="text/css">
-    .header{
-
-    }
-    .subheader{
-
-    }
-    .picture{
-        align-self: "middle"
-    }
-    </style>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css">
 </head>
-<!-- 标题-->
+
 <body>
-  <div class="container" id="header">
+  <div class="jumbotron">
     <div class="row">
-        <div class="col-md-4">
-            <strong>Sir Run Run Shaw
+      <div class="col-xs-12">
+        <h1 class="text-center">Sir. Run Run Shao</h1>
+        <h2 class="text-center">The man who build up the social media empire of HK</h2>
+        <div class="thumbnail">
+          <img src="Run_Run_Shaw.jpg">
+            <div class="caption text-center">
+              Sir.Run Run Shao, who build up the movie empire of HK when he is 40 years old. When he found the trend was changing, he changed the bussiness mode immediately, close the movie business and start social media business.
+            </div>
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-sm-offset-2">
+            <h3>Here's a time line of Sir. Run Run Shao's life:</h3>
+            <ul>
+                    <li>Born in Shanghai, November 1907.</li>
+                    <li>Start up Shaw Brothers film studio in 1958.</li>
+                    <li>Was canonized as the knight bachelor by Queen Elizabeth II in 1977.</li>
+                    <li>Donated more than ten billion in social welfare, especially to education and science and technology during his lifetime. Many colleges and universities have Chinese Run Run Shaw named "Yifu building".</li>
+                    <li>n the late years, Run Run Shaw allocated funds to establish the "Run Run Shaw prize", which was awarded the "Oriental Nobel prize", in recognition of the outstanding contributions in education and scientific research.</li>
+                    <li>Dies in home quietly at the age of 107 in 2014</li>
+            </ul>
+            <blockquote>
+                <p>
+                    "he legend of Run Run Shaw not only in his fortune, including his charity; across two centuries, Run Run Shaw has shown the strategic wisdom and Osteoform charity, is worth learning from generation to generation China entrepreneurs to follow."
+                </p>
+                <footer>
+                    <cite>Hong Kong Commercial Daily</cite>
+                </footer>
+            </blockquote>
+            <h3>
+                Please read more information of this incredible man on his <a href="https://zh.wikipedia.org/wiki/%E9%82%B5%E9%80%B8%E5%A4%AB">Wikipedia entry</a> and <a href="http://newschinatown.com/2009-03-06-03-59-adsf36/2432-2014-01-12-03-13-33.html">China Town Daily</a>
+            </h3>
         </div>
+        </div>
+      </div>
     </div>
   </div>
-</body>
+  <div>
 
-<!-- 副标题-->
-<body>
-    <div class="container" id="subheader">
-        <div class="row">
-           The man who changed whole Entertainment industry
-        </div>
-    </div>
-</body>
-
-<!-- 图片-->
-<body>
-    <div class="container" id="picture">
-        <div class="row">
-            <img src="Run_Run_Shaw.jpg">
-        </div>
-    </div>
-</body>
-<!-- 表格形式的介绍-->
-<body>
-    <form>
-
-    </form>
+  </div>
 </body>
 </html>
